# citra-android

./: .gitmodules  bitrise.yml  dummy.jks
.github/workflows/: android.yml
CMakeModules/: GenerateSCMRev.cmake
src/: CMakeLists.txt
src/android/app/: build.gradle
src/android/app/src/main/jni/ndk_helper/: CMakeLists.txt
src/audio_core/: cubeb_input.cpp
src/audio_core/hle/: hle.cpp  source.cpp
src/citra/: default_ini.h
src/citra_android/jni/: CMakeLists.txt  button_manager.cpp  button_manager.h  config.cpp  config.h  default_ini.h  game_info.cpp  game_info.h  native.cpp  native.h
src/citra_android/jni/emu_window/: emu_window.cpp  emu_window.h
src/citra_android/jni/ndk_helper/: GLContext.cpp  GLContext.h
src/common/: file_util.cpp
src/common/aarch64/: cpu_detect.cpp
src/common/logging/: backend.cpp  text_formatter.cpp
src/core/: CMakeLists.txt  core.cpp  core.h  memory.cpp  settings.cpp  settings.h  telemetry_session.cpp
src/core/frontend/: emu_window.cpp  emu_window.h  framebuffer_layout.cpp  framebuffer_layout.h  scope_acquire_window_context.cpp  scope_acquire_window_context.h
src/core/hw/: gpu.cpp
src/video_core/: CMakeLists.txt  command_processor.cpp  command_processor.h  gpu.cpp  gpu.h  gpu_thread.cpp  gpu_thread.h  renderer_base.cpp  renderer_base.h  video_core.cpp  video_core.h
src/video_core/renderer_opengl/: frame_dumper_opengl.cpp  gl_rasterizer.cpp  gl_rasterizer_cache.cpp  gl_rasterizer_cache.h  gl_shader_decompiler.cpp  gl_shader_disk_cache.cpp  gl_shader_disk_cache.h  gl_shader_gen.cpp  gl_shader_manager.cpp  gl_state.cpp  (+5 more)
(+264 files in other folders)
